fix: set max-width textarea overflow (#2)

--- a/static/index.css
+++ b/static/index.css
@@ -14,6 +14,10 @@ a:visited {
   color: #000000;
 }
 
+textarea {
+  max-width: 100%;
+}
+
 .shadow {
   box-shadow: rgba(0,0,0,0.3) 0 0 0.5rem;
 }
